--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby": "^2.7.5",
     "gatsby-cli": "^2.6.3",
     "gatsby-image": "^2.1.2",
+    "gatsby-plugin-catch-links": "^2.1.0",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-offline": "^2.1.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
@@ -19,6 +20,7 @@
     "gatsby-transformer-json": "^2.1.11",
     "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.20",
+    "graphql": "^14.3.1",
     "katex": "^0.10.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
